# patl

./: .gitignore  CMakeLists.txt  CMakeMacro.cmake  Doxyfile  ProjectHome.md  README  README.md  annotated.html  annotated_dup.js  classes.html  desc_ru.txt  dir_000000_000002.html  dir_000001_000011.html  dir_000003_000011.html  dir_000004_000011.html  dir_000005_000011.html  dir_000006_000011.html  dir_000007_000011.html  dir_000008_000011.html  dir_000009_000011.html  dir_000010_000011.html  dir_000011_000000.html  dir_000011_000002.html  dir_000012_000011.html  dir_000013_000011.html  dir_000015_000011.html  dir_1901e6808b569f9a8c8606e103ed6e9b.html  dir_1901e6808b569f9a8c8606e103ed6e9b.js  dir_1901e6808b569f9a8c8606e103ed6e9b_dep.map  dir_1901e6808b569f9a8c8606e103ed6e9b_dep.md5  dir_2ce005003d486a971aca7cfdd90f0354.html  dir_2ce005003d486a971aca7cfdd90f0354.js  dir_2ce005003d486a971aca7cfdd90f0354_dep.map  dir_2ce005003d486a971aca7cfdd90f0354_dep.md5  dir_40b54b7565e3d9888094e5bd913cbdb0.html  dir_40b54b7565e3d9888094e5bd913cbdb0.js  dir_40b54b7565e3d9888094e5bd913cbdb0_dep.map  dir_40b54b7565e3d9888094e5bd913cbdb0_dep.md5  dir_418287c27f26d3c7c769097cd4e58fbf.html  dir_418287c27f26d3c7c769097cd4e58fbf.js  (+325 more)
demos/: gcc.bat
muxoclon/: muxoclon.cpp
patl/: bit_comp.hpp  config.hpp  gcc.bat  lca_oracle.hpp  leaf_oracle.hpp  levenshtein.hpp  maxrep_iterator.hpp  partial.hpp  patcont.cpp  patl.vcproj  priority.hpp  suffix_map.hpp  suffix_set.hpp  suffix_utils.hpp  super_maxrep_iterator.hpp  trie_map.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+92 more)
(+2020 files in other folders)
