PROJECT(patl CXX)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
INCLUDE (CMakeMacro.cmake)

SET(CMAKE_C_FLAGS "-${CMAKE_C_FLAGS} -Wno-error")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error")

IF(CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

AUX_SOURCE_DIRECTORY(uxn/patl SRC_PATL)
ADD_LIBRARY(patl SHARED ${SRC_PATL})
INSTALL (TARGETS patl DESTINATION ${LIBDIR})

ADD_EXECUTABLE(patl_insider uxn/demos/insider/insider.cpp)
